// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormatComment should format comment consistently 1`] = `
"## mock title
<details>
<summary><strong>tests/mockFiles/mockFile0.js</strong></summary>

##### FIXME:

- [ ] :add implementation \`Line: 10\`
https://githubHost/owner/repo/blob/sha/mockFile0.js#L10-L15

##### NOTE

- [ ] Please don't forget review \`Line: 11\`
https://githubHost/owner/repo/blob/sha/mockFile0.js#L11-L16
- [ ] another note \`Line: 20\`
https://githubHost/owner/repo/blob/sha/mockFile0.js#L20-L25

##### tODo:

- [ ] this should present \`Line: 13\`
https://githubHost/owner/repo/blob/sha/mockFile0.js#L13-L18

##### missingBody

- [ ] <space> \`Line: 1\`
https://githubHost/owner/repo/blob/sha/mockFile0.js#L1-L6
</details>

<details>
<summary><strong>tests/mockFiles/mockFile2.js</strong></summary>

##### FIXME:

- [ ] :add implementation \`Line: 20\`
https://githubHost/owner/repo/blob/sha/mockFile2.js#L20-L25

##### NOTE

- [ ] Please don't forget review \`Line: 21\`
https://githubHost/owner/repo/blob/sha/mockFile2.js#L21-L26
- [ ] another note \`Line: 2\`
https://githubHost/owner/repo/blob/sha/mockFile2.js#L2-L7

##### tODo:

- [ ] this should present \`Line: 5\`
https://githubHost/owner/repo/blob/sha/mockFile2.js#L5-L10
</details>

"
`;

exports[`FormatComment should tag actor with reviewMsg 1`] = `
"## mock title
<details>
<summary><strong>tests/mockFiles/mockFile0.js</strong></summary>

##### FIXME:

- [ ] :add implementation \`Line: 10\`
https://githubHost/owner/repo/blob/sha/mockFile0.js#L10-L15

##### NOTE

- [ ] Please don't forget review \`Line: 11\`
https://githubHost/owner/repo/blob/sha/mockFile0.js#L11-L16
- [ ] another note \`Line: 20\`
https://githubHost/owner/repo/blob/sha/mockFile0.js#L20-L25

##### tODo:

- [ ] this should present \`Line: 13\`
https://githubHost/owner/repo/blob/sha/mockFile0.js#L13-L18

##### missingBody

- [ ] <space> \`Line: 1\`
https://githubHost/owner/repo/blob/sha/mockFile0.js#L1-L6
</details>

<details>
<summary><strong>tests/mockFiles/mockFile2.js</strong></summary>

##### FIXME:

- [ ] :add implementation \`Line: 20\`
https://githubHost/owner/repo/blob/sha/mockFile2.js#L20-L25

##### NOTE

- [ ] Please don't forget review \`Line: 21\`
https://githubHost/owner/repo/blob/sha/mockFile2.js#L21-L26
- [ ] another note \`Line: 2\`
https://githubHost/owner/repo/blob/sha/mockFile2.js#L2-L7

##### tODo:

- [ ] this should present \`Line: 5\`
https://githubHost/owner/repo/blob/sha/mockFile2.js#L5-L10
</details>

---
@mock-actor please review"
`;
